name:             example
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

executable example
  ghc-options:
      -Wall
  hs-source-dirs:
      driver, src
  main-is:
      Main.hs
  build-depends:
      base == 4.*

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test, src
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , hspec   == 2.*
    , silently
